--- a/packages/web-app/shared/react-application.scss
+++ b/packages/web-app/shared/react-application.scss
@@ -164,6 +164,6 @@ html.dark-background {
   html,
   body {
     width: 210mm;
-    height: 296mm;
+    height: 297mm;
   }
 }
